# realtime-ml-inference

./: README.md  generate_schema.py  pyproject.toml  schema_penguin.yaml  schema_titanic.yaml  train_random_forest.py
data/: penguins.csv
models/: onnx_predictions.csv  penguin_random_forest.onnx  penguin_random_forest.pmml  pmml_predictions.csv  predictions.csv  titanic_lightgbm.onnx  titanic_lightgbm.pmml  titanic_lightgbm_predictions.csv  titanic_onnx_predictions.csv  titanic_pmml_predictions.csv  titanic_random_forest.onnx  titanic_random_forest_v2.onnx  titanic_random_forest_v2.pmml
onnx-predictor/: pom.xml
onnx-predictor/src/main/java/com/example/onnx/: InferenceResult.java  ModelRunner.java  OnnxPredictor.java  SampleUsage.java  SchemaReloadExample.java
pmml-predictor/: pom.xml
pmml-predictor/src/main/java/com/example/pmml/: InferenceResult.java  ModelRunner.java  PmmlPredictor.java  SampleUsage.java  SchemaReloadExample.java
src/: load_penguins_dataset.py  train_lightgbm.py  train_random_forest.py
